fixing shadow on ios images

--- a/source/stylesheets/custom.scss
+++ b/source/stylesheets/custom.scss
@@ -321,6 +321,10 @@
 
   }
 
+  .no_shadow {
+    box-shadow: 0px 0px 0px 0px #bcbcbc;
+  }
+
   img:last-child {
     margin-right: 0px;
   }
